--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@ body {
   font-family: sans-serif;
 }
 .navbar{
-  background-color: blue;
+  background-color: #C0C0C0;
   background-image: none;
 }
