--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
+  /*background-image: url("img/hexellence.png");*/
+  background-image:linear-gradient(white, #666666);
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
 }
 .navbar{
   background-color: #C0C0C0;
