--- a/src/Comp.css
+++ b/src/Comp.css
@@ -4,27 +4,23 @@ img{
 }
 Button{
     width:100%;
-    border-radius: 10px;
-    color:black;
-    background-color: greenyellow;
-    margin: 2%;
+    margin: 0.4em;
 }
-Button #go{
-    float: right;
-    width:10%;
-}
+
 Button img{
     float: left;
     height:20%;
     width:20%;
 }
-.lorem{
-    text-align: center;
+h1{
+    border-bottom: 5px solid #337ab7;
+    padding-bottom: 5px;
+    color:#337ab7;
+    align-items: flex-start;
 }
-
 p{
     font-size:20px;
-    text-align: left;
+    text-align: center;
 }
 .left{
     float:left;
@@ -34,15 +30,11 @@ p{
     width:10%;
     float:right;
 }
-.header{
-    background-color: red;
-}
-
 .center{
     text-align: center;
 }
 .price{
-    font-size: 30px;
+    font-size: 2em;
 }
 .vertical-align {
     display: flex;
@@ -53,5 +45,6 @@ p{
     height:auto;   
 }
 .opis{
+    align-items: flex-start;
     text-align: center;
 }
