--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
   /*background-image: url("img/hexellence.png");*/
-  background-image: url("./img/img1.png");
+  background-image: url("./img/img2.png");
+  background-position: center;
   /*background-color: #666666;*/
 
   /*background-image:linear-gradient(white, #666666);*/
