--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-
 }
 .navbar{
-  background-color: #C0C0C0;
+  background-color: #DDDDDD;
   background-image: none;
 }
