--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,8 @@ body {
   background-color: #666666;
   color: black;
 }
+/*.fa fa-edit m-right-xs{*/
+  /*background-color: #666;*/
+  /*color: black;*/
+
+/*}*/
