--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,22 @@ body {
   background-color: #666666;
   color: black;
 }
-.b1{
+.well{
   position: relative;
+  background-color: cornflowerblue;
+  border: 2px solid rgba(33, 68, 72, 0.59);
+  text-align: center;
+  font: bold 1.2em/2px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
-.b1 div{
+.well div{
   position: absolute;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
 }
-
+.well2{
+  background-color: cornflowerblue;
+  border: 2px solid rgba(33, 68, 72, 0.59);
+  font: bold 1.2em/35px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+}
