--- a/src/index.css
+++ b/src/index.css
@@ -38,5 +38,6 @@ body {
 .well2{
   background-color: cornflowerblue;
   border: 2px solid rgba(33, 68, 72, 0.59);
+  text-align: center;
   font: bold 1.2em/35px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
