--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,21 @@ body {
   border: 2px solid rgba(33, 68, 72, 0.59);
   font: bold 1.2em/35px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
+.fileContainer {
+  overflow: hidden;
+  position: relative;
+}
+
+.fileContainer [type=file] {
+  cursor: inherit;
+  display: block;
+  font-size: 999px;
+  filter: alpha(opacity=0);
+  min-height: 100%;
+  min-width: 100%;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 0;
+}
