--- a/src/Karola.css
+++ b/src/Karola.css
@@ -1,44 +1,54 @@
-table { background-color: #DDDDDD;
+table {
+    background-color: #DDDDDD;
 
 }
-div{
+
+div {
     text-align: center;
 }
+
 th td {
-text-align: left;
+    text-align: left;
 
 }
-thead:hover{
+
+thead:hover {
     background-color: inherit;
     text-align: center;
 }
-input{
-  width:30%;
+
+input {
+    width: 30%;
     margin: 10px;
 
+}
 
+h1 {
+    text-align: center;
+    color: #000;
 }
-h1{
-    text-align:center ;
-    color:#000;
-}
-.table-bordered>thead>tr>th, table-bordered>thead>tr>td {
+
+.table-bordered > thead > tr > th, table-bordered > thead > tr > td {
     text-align: center;
     line-height: 10px;
     font-size: 2rem;
 
 }
-.table-bordered>thead>tr>th{
+
+.table-bordered > thead > tr > th {
     line-height: 10px;
     font-size: 2rem;
 }
+
 .table-striped > tbody > tr:nth-of-type(odd) {
     background-color: #9abbd8;
 }
+
 .table-striped > tbody > tr:nth-of-type(odd):hover {
     background-color: #fff;
     cursor: pointer;
 }
+
 .table > caption + thead > tr:first-child > th, .table > colgroup + thead > tr:first-child > th, .table > thead:first-child > tr:first-child > th, .table > caption + thead > tr:first-child > td, .table > colgroup + thead > tr:first-child > td, .table > thead:first-child > tr:first-child > td {
     line-height: 30px;
 }
