--- a/src/DetailedView.css
+++ b/src/DetailedView.css
@@ -2,68 +2,68 @@
     display: inline-block;
 }
 
-.Comp-img {
+.DetailedView-img {
     width: 100%;
     height: auto;
 }
 
-.Comp-button {
+.DetailedView-button {
     width: 100%;
     margin: 0.4em;
 }
 
-.Comp-button img {
+.DetailedView-button img {
     float: left;
     height: 20%;
     width: 20%;
 }
 
-.Comp-h1 {
+.DetailedView-h1 {
     border-bottom: 5px solid #337ab7;
     padding-bottom: 5px;
     color: #337ab7;
     align-items: flex-start;
 }
 
-.Comp-p {
+.DetailedView-p {
     font-size: 20px;
     text-align: center;
 }
 
-.Comp-left {
+.DetailedView-left {
     float: left;
 }
 
-.Comp-right {
+.DetailedView-right {
     height: 10%;
     width: 10%;
     float: right;
 }
 
-.Comp-center {
+.DetailedView-center {
     text-align: center;
 }
 
-.Comp-price {
+.DetailedView-price {
     font-size: 2em;
 }
 
-.Comp-vertical-align {
+.DetailedView-vertical-align {
     display: flex;
     align-items: center;
 }
 
-.Comp-wykresik {
+.DetailedView-wykresik {
     width: 100%;
     height: auto;
 }
 
-.Comp-opis {
+.DetailedView-opis {
     align-items: flex-start;
     text-align: center;
 }
 
-.Comp-list {
+.DetailedView-list {
 
     color: #000;
     font-weight: 800;
@@ -76,15 +76,15 @@
 
 }
 
-Comp-FP-div {
+DetailedView-FP-div {
     flex-wrap: wrap;
 }
 
-.Comp-div-FavoriteProducts {
+.DetailedView-div-FavoriteProducts {
     text-align: center;
 }
 
-.Comp-butt {
+.DetailedView-butt {
     font-weight: 400;
 
 }
@@ -231,7 +231,7 @@ Comp-FP-div {
     box-shadow: 0px 0px 5px 5px #0099E0;
 }
 
-.Comp-panel {
+.DetailedView-panel {
     font-size: 2em;
 }
 
